--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+
     <script
       src="https://kit.fontawesome.com/fa62c117c7.js"
       crossorigin="anonymous"
     ></script>
+
     <link rel="stylesheet" href="styles.css" />
-    <title>Raj Shekhar</title>
+
+    <title>Ahanaf Asir</title>
   </head>
+
   <body class="light" id="top">
     <header class="header center">
       <h3>
-        <a href="https://rajshekhar26.github.io/cleanfolio-minimal" class="link"
-          >RS.</a
-        >
+        <a href="https://ahanafasir.netlify.app/" class="link">Ahanaf Asir</a>
       </h3>
 
       <nav class="nav center">
@@ -55,23 +57,27 @@
     <main>
       <!-- About -->
       <div class="about center">
-        <h1>Hi, I am <span class="about__name">Raj Shekhar.</span></h1>
+        <h1>Hi, I am <span class="about__name">Ahanaf Asir</span></h1>
         <h2 class="about__role">A Front end Developer.</h2>
         <p class="about__desc">
-          Consectetur neque sed quam molestiae consectetur nesciunt sit alias
-          Vitae libero perferendis reprehenderit optio veritatis Accusantium at
-          voluptatum cumque temporibus et Explicabo iste porro quis numquam
-          distinctio Repellendus adipisci nam perferendis amet eaque hic
-          Voluptates
+          Specializing in creating sleek and user-centric websites. With 2+
+          years in the field, I blend design and functionality seamlessly using
+          HTML, CSS, and JavaScript. I enjoy tackling challenges head-on, from
+          bug-squashing to enhancing user experiences. Let's bring your ideas to
+          reality!
         </p>
 
         <div class="about__contact center">
-          <a href="https://example.com">
+          <a
+            target="_blank"
+            href="https://drive.google.com/file/d/1CA_Ggpecp6zwjdI9qmpdewUV-ayazYW7/view?usp=sharing"
+          >
             <span class="btn btn--outline">Resume</span>
           </a>
 
           <a
-            href="https://github.com/rajshekhar26"
+            target="_blank"
+            href="https://github.com/ahanafasir"
             aria-label="github"
             class="link link--icon"
           >
@@ -79,7 +85,8 @@
           </a>
 
           <a
-            href="https://linkedin.com/in/rajshekhar26"
+            target="_blank"
+            href="https://linkedin.com/in/ahanafasir83"
             aria-label="linkedin"
             class="link link--icon"
           >
@@ -94,27 +101,28 @@
 
         <div class="projects__grid">
           <div class="project">
-            <h3>Project 1</h3>
+            <h3>Omnifood Website</h3>
             <p class="project__description">
-              Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
-              sapiente debitis labore sed ipsam Mollitia repellat illum quod
-              unde beatae Quis
+              A static food subscription website developed with HTML, CSS &
+              JavaScript
             </p>
             <ul class="project__stack">
-              <li class="project__stack-item">SASS</li>
-              <li class="project__stack-item">TypeScript</li>
-              <li class="project__stack-item">React</li>
+              <li class="project__stack-item">HTML</li>
+              <li class="project__stack-item">CSS</li>
+              <li class="project__stack-item">JavaScript</li>
             </ul>
 
             <a
-              href="https://github.com"
+              target="_blank"
+              href="https://github.com/ahanafasir/omnifood"
               aria-label="source code"
               class="link link--icon"
             >
               <i aria-hidden="true" class="fab fa-github"></i>
             </a>
             <a
-              href="https://example.com"
+              target="_blank"
+              href="https://o-mnifood.netlify.app/"
               aria-label="live preview"
               class="link link--icon"
             >
@@ -130,23 +138,15 @@
               unde beatae Quis
             </p>
             <ul class="project__stack">
-              <li class="project__stack-item">SASS</li>
-              <li class="project__stack-item">TypeScript</li>
-              <li class="project__stack-item">React</li>
+              <li class="project__stack-item">HTML</li>
+              <li class="project__stack-item">CSS</li>
+              <li class="project__stack-item">JavaScript</li>
             </ul>
 
-            <a
-              href="https://github.com"
-              aria-label="source code"
-              class="link link--icon"
-            >
+            <a href="#" aria-label="source code" class="link link--icon">
               <i aria-hidden="true" class="fab fa-github"></i>
             </a>
-            <a
-              href="https://example.com"
-              aria-label="live preview"
-              class="link link--icon"
-            >
+            <a href="#" aria-label="live preview" class="link link--icon">
               <i aria-hidden="true" class="fas fa-external-link-alt"></i>
             </a>
           </div>
@@ -159,23 +159,15 @@
               unde beatae Quis
             </p>
             <ul class="project__stack">
-              <li class="project__stack-item">SASS</li>
-              <li class="project__stack-item">TypeScript</li>
-              <li class="project__stack-item">React</li>
+              <li class="project__stack-item">HTML</li>
+              <li class="project__stack-item">CSS</li>
+              <li class="project__stack-item">JavaScript</li>
             </ul>
 
-            <a
-              href="https://github.com"
-              aria-label="source code"
-              class="link link--icon"
-            >
+            <a href="#" aria-label="source code" class="link link--icon">
               <i aria-hidden="true" class="fab fa-github"></i>
             </a>
-            <a
-              href="https://example.com"
-              aria-label="live preview"
-              class="link link--icon"
-            >
+            <a href="#" aria-label="live preview" class="link link--icon">
               <i aria-hidden="true" class="fas fa-external-link-alt"></i>
             </a>
           </div>
@@ -188,23 +180,23 @@
         <ul class="skills__list">
           <li class="skills__list-item btn btn--plain">HTML</li>
           <li class="skills__list-item btn btn--plain">CSS</li>
-          <li class="skills__list-item btn btn--plain">SCSS</li>
+          <!-- <li class="skills__list-item btn btn--plain">SCSS</li> -->
           <li class="skills__list-item btn btn--plain">JavaScript</li>
-          <li class="skills__list-item btn btn--plain">TypeScript</li>
+          <!-- <li class="skills__list-item btn btn--plain">TypeScript</li>
           <li class="skills__list-item btn btn--plain">React</li>
-          <li class="skills__list-item btn btn--plain">Redux</li>
+          <li class="skills__list-item btn btn--plain">Redux</li> -->
           <li class="skills__list-item btn btn--plain">Git</li>
-          <li class="skills__list-item btn btn--plain">Material UI</li>
+          <!-- <li class="skills__list-item btn btn--plain">Material UI</li>
           <li class="skills__list-item btn btn--plain">Jest</li>
           <li class="skills__list-item btn btn--plain">Enzyme</li>
-          <li class="skills__list-item btn btn--plain">CI/CD</li>
+          <li class="skills__list-item btn btn--plain">CI/CD</li> -->
         </ul>
       </section>
 
       <!-- Contact -->
       <section class="section contact center" id="contact">
         <h2 class="section__title">Contact</h2>
-        <a href="mailto:rjshekhar.official@gmail.com">
+        <a href="mailto:ahanafasir83@gmail.com">
           <span class="btn btn--outline">Email me</span>
         </a>
       </section>
@@ -212,19 +204,19 @@
 
     <footer class="footer">
       <a
-        href="https://github.com/rajshekhar26/cleanfolio-minimal"
+        href="https://github.com/ahanafasir/portfolio"
         class="link footer__link"
       >
-        Created By Raj Shekhar
+        Created By Ahanaf Asir
       </a>
     </footer>
 
     <div class="scroll-container">
-    <div class="scroll-top">
-      <a aria-label="Scroll up" href="#top">
-        <i aria-hidden="true" class="fas fa-arrow-up"></i>
-      </a>
-    </div>
+      <div class="scroll-top">
+        <a aria-label="Scroll up" href="#top">
+          <i aria-hidden="true" class="fas fa-arrow-up"></i>
+        </a>
+      </div>
     </div>
 
     <script src="./script.js"></script>
