--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <link rel="stylesheet" href="styles.css" />
 
-    <title>Ahanaf Asir</title>
+    <title>AA</title>
 
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
   </head>
