--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <link rel="stylesheet" href="styles.css" />
 
-    <title>AA</title>
+    <title>Ahanaf Asir</title>
 
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
   </head>
@@ -26,7 +26,7 @@
   <body class="light" id="top">
     <header class="header center">
       <h3>
-        <a href="https://ahanafasir.netlify.app/" class="link">Ahanaf Asir</a>
+        <a href="https://ahanafasir.netlify.app/" class="link">AA</a>
       </h3>
 
       <nav class="nav center">
