--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         href="https://github.com/ahanafasir/portfolio"
         class="link footer__link"
       >
-        Created By Ahanaf Asir
+        Created by Ahanaf Asir
       </a>
     </footer>
 
