--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Portfolio" />
+    <meta property="’og:title’" content="Ahanaf Asir" />
+    <meta property="’og:description’" content="My portfolio site" />
+    <meta property="’og:url’" content="https://ahanafasir.netlify.app/" />
+    <meta property="og:image" src="avatar.jpg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
