updated meta tags

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <meta property="’og:title’" content="Ahanaf Asir" />
     <meta property="’og:description’" content="My portfolio site" />
     <meta property="’og:url’" content="https://ahanafasir.netlify.app/" />
-    <meta property="og:image" src="avatar.jpg" />
+    <meta
+      property="’og:image’"
+      content="https://drive.google.com/file/d/1ZsaJ1awBakeRV32Mn1Ks6_SsVuuat8nf/view?usp=sharing"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
