--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <meta property="’og:title’" content="Ahanaf Asir" />
     <meta property="’og:description’" content="My portfolio site" />
     <meta property="’og:url’" content="https://ahanafasir.netlify.app/" />
-    <meta property="’og:image’" content="https://ibb.co/0cXGpDH" />
+    <meta
+      property="’og:image’"
+      content="https://i.ibb.co/NSMgC5M/apple-touch-icon.png"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
