folder restrcuture and minor fixes

--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Portfolio" />
     <meta property="’og:title’" content="Ahanaf Asir" />
-    <meta property="’og:description’" content="My portfolio site" />
-    <meta property="’og:url’" content="https://ahanafasir.netlify.app/" />
     <meta
       property="’og:image’"
-      content="https://i.ibb.co/NSMgC5M/apple-touch-icon.png"
+      content="https://i.ibb.co/ygTr0xd/site-thumb.jpg"
     />
+    <meta property="’og:description’" content="My portfolio site" />
+    <meta property="’og:url’" content="https://ahanafasir.netlify.app/" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="627" />
+    <!-- TYPE BELOW IS PROBABLY: 'website' or 'article' or look on https://ogp.me/#types -->
+    <meta property="og:type" content="website" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -23,11 +27,18 @@
       crossorigin="anonymous"
     ></script>
 
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/general.css" />
+    <link rel="stylesheet" href="css/queries.css" />
+    <link rel="stylesheet" href="css/styles.css" />
 
     <title>Ahanaf Asir</title>
 
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="images/icons/favicon-32x32.png"
+    />
   </head>
 
   <body class="light" id="top">
@@ -69,11 +80,9 @@
         <h1>Hi, I am <span class="about__name">Ahanaf Asir</span></h1>
         <h2 class="about__role">A Front end Developer.</h2>
         <p class="about__desc">
-          Specializing in creating sleek and user-centric websites. With 2+
-          years in the field, I blend design and functionality seamlessly using
-          HTML, CSS, and JavaScript. I enjoy tackling challenges head-on, from
-          bug-squashing to enhancing user experiences. Let's bring your ideas to
-          reality!
+          Specializing in creating sleek and user-centric websites. I blend
+          design and functionality seamlessly using HTML, CSS, and JavaScript.
+          Let's bring your ideas to reality!
         </p>
 
         <div class="about__contact center">
@@ -228,6 +237,6 @@
       </div>
     </div>
 
-    <script src="./script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
