--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
+      href="images/site-thumb.jpg"
+    />
+
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
       href="images/icons/favicon-32x32.png"
     />
   </head>
