--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
         <a href="https://ahanafasir.netlify.app/" class="link">AA</a>
       </h3>
 
+      <img src="images/avatar.jpg" alt="avatar" class="avatar" />
+
       <nav class="nav center">
         <ul class="nav__list center">
           <li class="nav__list-item">
