--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="about__contact center">
           <a
             target="_blank"
-            href="https://drive.google.com/file/d/1CA_Ggpecp6zwjdI9qmpdewUV-ayazYW7/view?usp=sharing"
+            href="https://drive.google.com/file/d/1n45SBN_VlCMXCdPHz8TL2_XpzFcKwbxm/view?usp=sharing"
           >
             <span class="btn btn--outline">Resume</span>
           </a>
@@ -145,22 +145,30 @@
           </div>
 
           <div class="project">
-            <h3>Project 2</h3>
+            <h3>Asian Power BD</h3>
             <p class="project__description">
-              Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
-              sapiente debitis labore sed ipsam Mollitia repellat illum quod
-              unde beatae Quis
+              Single Page Application developed for a local power compamny
             </p>
             <ul class="project__stack">
-              <li class="project__stack-item">HTML</li>
-              <li class="project__stack-item">CSS</li>
-              <li class="project__stack-item">JavaScript</li>
+              <li class="project__stack-item">Project Management</li>
+              <li class="project__stack-item">Requirement Analysis</li>
+              <li class="project__stack-item">Content Planning</li>
             </ul>
 
-            <a href="#" aria-label="source code" class="link link--icon">
+            <a
+              target="_blank"
+              href="https://github.com/asian-power"
+              aria-label="source code"
+              class="link link--icon"
+            >
               <i aria-hidden="true" class="fab fa-github"></i>
             </a>
-            <a href="#" aria-label="live preview" class="link link--icon">
+            <a
+              target="_blank"
+              href="https://asianpowerbd.com/"
+              aria-label="live preview"
+              class="link link--icon"
+            >
               <i aria-hidden="true" class="fas fa-external-link-alt"></i>
             </a>
           </div>
