updated resuje, projects and skills sections

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <!-- About -->
       <div class="about center">
         <h1>Hi, I am <span class="about__name">Ahanaf Asir</span></h1>
-        <h2 class="about__role">A Front end Developer.</h2>
+        <h2 class="about__role">A Software Developer.</h2>
         <p class="about__desc">
           Specializing in creating sleek and user-centric websites. I blend
           design and functionality seamlessly using HTML, CSS, and JavaScript.
@@ -84,7 +84,7 @@
         <div class="about__contact center">
           <a
             target="_blank"
-            href="https://drive.google.com/file/d/1n45SBN_VlCMXCdPHz8TL2_XpzFcKwbxm/view?usp=sharing"
+            href="https://drive.google.com/file/d/1aLCxj1kUC201SHsHnsOXXh4Uhy1Yx3Q4/view?usp=sharing"
           >
             <span class="btn btn--outline">Resume</span>
           </a>
@@ -174,16 +174,15 @@
           </div>
 
           <div class="project">
-            <h3>Project 3</h3>
+            <h3>PHP Project</h3>
             <p class="project__description">
               Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
-              sapiente debitis labore sed ipsam Mollitia repellat illum quod
-              unde beatae Quis
+              sapiente
             </p>
             <ul class="project__stack">
-              <li class="project__stack-item">HTML</li>
-              <li class="project__stack-item">CSS</li>
               <li class="project__stack-item">JavaScript</li>
+              <li class="project__stack-item">PHP</li>
+              <li class="project__stack-item">MySQL</li>
             </ul>
 
             <a href="#" aria-label="source code" class="link link--icon">
@@ -204,6 +203,8 @@
           <li class="skills__list-item btn btn--plain">CSS</li>
           <!-- <li class="skills__list-item btn btn--plain">SCSS</li> -->
           <li class="skills__list-item btn btn--plain">JavaScript</li>
+          <li class="skills__list-item btn btn--plain">PHP</li>
+          <li class="skills__list-item btn btn--plain">SQL</li>
           <!-- <li class="skills__list-item btn btn--plain">TypeScript</li>
           <li class="skills__list-item btn btn--plain">React</li>
           <li class="skills__list-item btn btn--plain">Redux</li> -->
