--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="about__contact center">
           <a
             target="_blank"
-            href="https://drive.google.com/file/d/1rzsdHJPntVOfBJL2vuKhowBMTMSe4qaw/view?usp=sharing"
+            href="https://drive.google.com/file/d/1DhWAMVdGotATvx5skZzcKpNUz82OqYOE/view?usp=sharing"
           >
             <span class="btn btn--outline">Resume</span>
           </a>
@@ -117,8 +117,7 @@
           <div class="project">
             <h3>Omnifood Website</h3>
             <p class="project__description">
-              A static food subscription website developed with HTML, CSS &
-              JavaScript
+              A responsive food subscription website
             </p>
             <ul class="project__stack">
               <li class="project__stack-item">HTML</li>
@@ -145,14 +144,36 @@
           </div>
 
           <div class="project">
+            <h3>PHP Contact Form</h3>
+            <p class="project__description">
+              A contact form with e-mail functionalities
+            </p>
+            <ul class="project__stack">
+              <li class="project__stack-item">JavaScript</li>
+              <li class="project__stack-item">PHP</li>
+              <li class="project__stack-item">XAMPP</li>
+            </ul>
+
+            <a
+              target="_blank"
+              href="https://github.com/ahanafasir/contact-form"
+              aria-label="source code"
+              class="link link--icon"
+            >
+              <i aria-hidden="true" class="fab fa-github"></i>
+            </a>
+            <a href="#" aria-label="live preview" class="link link--icon">
+              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
+            </a>
+          </div>
+
+          <div class="project">
             <h3>Asian Power BD</h3>
             <p class="project__description">
               Single Page Application developed for a local power compamny
             </p>
             <ul class="project__stack">
-              <li class="project__stack-item">Project Management</li>
-              <li class="project__stack-item">Requirement Analysis</li>
-              <li class="project__stack-item">Content Planning</li>
+              <li class="project__stack-item">Project Lead</li>
             </ul>
 
             <a
@@ -169,26 +190,6 @@
               aria-label="live preview"
               class="link link--icon"
             >
-              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
-            </a>
-          </div>
-
-          <div class="project">
-            <h3>PHP Project</h3>
-            <p class="project__description">
-              Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
-              sapiente
-            </p>
-            <ul class="project__stack">
-              <li class="project__stack-item">JavaScript</li>
-              <li class="project__stack-item">PHP</li>
-              <li class="project__stack-item">MySQL</li>
-            </ul>
-
-            <a href="#" aria-label="source code" class="link link--icon">
-              <i aria-hidden="true" class="fab fa-github"></i>
-            </a>
-            <a href="#" aria-label="live preview" class="link link--icon">
               <i aria-hidden="true" class="fas fa-external-link-alt"></i>
             </a>
           </div>
