--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
             <a class="link link--nav" href="#skills">Skills</a>
           </li>
           <li class="nav__list-item">
+            <a
+              target="_blank"
+              class="link link--nav"
+              href="https://blog-ahanafasir.netlify.app/"
+              >Blog</a
+            >
+          </li>
+          <li class="nav__list-item">
             <a class="link link--nav" href="#contact">Contact</a>
           </li>
         </ul>
