added more projects link

--- a/index.html
+++ b/index.html
@@ -202,6 +202,15 @@
             </a>
           </div>
         </div>
+
+        <div class="more__projects">
+          <a
+            target="_blank"
+            href="https://github.com/ahanafasir?tab=repositories"
+            class="link projects__link"
+            >more projects</a
+          >
+        </div>
       </section>
 
       <!-- Skills -->
