updated blog section

--- a/index.html
+++ b/index.html
@@ -52,12 +52,7 @@
             <a class="link link--nav" href="#skills">Skills</a>
           </li>
           <li class="nav__list-item">
-            <a
-              target="_blank"
-              class="link link--nav"
-              href="https://blog-ahanafasir.netlify.app/"
-              >Blog</a
-            >
+            <a class="link link--nav" href="#blog">Blog</a>
           </li>
           <li class="nav__list-item">
             <a class="link link--nav" href="#contact">Contact</a>
@@ -232,6 +227,41 @@
           <li class="skills__list-item btn btn--plain">Enzyme</li>
           <li class="skills__list-item btn btn--plain">CI/CD</li> -->
         </ul>
+      </section>
+
+      <!-- Blog -->
+      <section id="blog" class="section posts">
+        <h2 class="section__title">Blog</h2>
+
+        <div class="blog__grid">
+          <div class="blog">
+            <h3>Tinkering with AOSP</h3>
+            <p class="blog__description">A Journey to open source systems</p>
+            <ul class="blog__stack">
+              <li class="blog__stack-item">ADB</li>
+              <li class="blog__stack-item">AOSP</li>
+              <li class="blog__stack-item">Android</li>
+            </ul>
+
+            <a
+              target="_blank"
+              href="https://blog-ahanafasir.netlify.app/post/demo-post-1"
+              aria-label="live preview"
+              class="link link--icon"
+            >
+              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
+            </a>
+          </div>
+        </div>
+
+        <div class="more__posts">
+          <a
+            target="_blank"
+            href="https://blog-ahanafasir.netlify.app/"
+            class="link blog__link"
+            >more posts</a
+          >
+        </div>
       </section>
 
       <!-- Contact -->
