--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
         <div class="projects__grid">
           <div class="project">
-            <h3>Omnifood Website</h3>
+            <h3>Omnifood</h3>
             <p class="project__description">
               A responsive food subscription website
             </p>
@@ -147,7 +147,7 @@
           </div>
 
           <div class="project">
-            <h3>PHP Contact Form</h3>
+            <h3>Contact Form</h3>
             <p class="project__description">
               A contact form with e-mail functionalities
             </p>
@@ -173,7 +173,7 @@
           <div class="project">
             <h3>Asian Power BD</h3>
             <p class="project__description">
-              Single Page Application developed for a local power compamny
+              Single Page Application for a local power compamny
             </p>
             <ul class="project__stack">
               <li class="project__stack-item">Project Lead</li>
