--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           <div class="project">
             <h3>Asian Power BD</h3>
             <p class="project__description">
-              Single Page Application for a local power compamny
+              SPA for a local power compamny
             </p>
             <ul class="project__stack">
               <li class="project__stack-item">Project Lead</li>
