--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <div class="project">
             <h3>Omnifood</h3>
             <p class="project__description">
-              A responsive food subscription website
+              Responsive food subscription website
             </p>
             <ul class="project__stack">
               <li class="project__stack-item">HTML</li>
@@ -149,7 +149,7 @@
           <div class="project">
             <h3>Contact Form</h3>
             <p class="project__description">
-              A contact form with e-mail functionalities
+              Contact form with e-mail functionalities
             </p>
             <ul class="project__stack">
               <li class="project__stack-item">JavaScript</li>
