added services section

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
       <nav class="nav center">
         <ul class="nav__list center">
           <li class="nav__list-item">
+            <a class="link link--nav" href="#services">Services</a>
+          </li>
+          <li class="nav__list-item">
             <a class="link link--nav" href="#projects">Projects</a>
           </li>
           <li class="nav__list-item">
@@ -112,6 +115,104 @@
         </div>
       </div>
 
+      <!-- Services -->
+      <section id="services" class="section services">
+        <h2 class="section__title">Services</h2>
+
+        <div class="services__grid">
+          <div class="service">
+            <h3>Web Dev</h3>
+            <p class="service__description">
+              Develop Websites for your business.
+            </p>
+            <ul class="service__stack">
+              <li class="service__stack-item">HTML</li>
+              <li class="service__stack-item">CSS</li>
+              <li class="service__stack-item">JavaScript</li>
+            </ul>
+
+            <!-- <a
+              target="_blank"
+              href="https://github.com/ahanafasir/omnifood"
+              aria-label="source code"
+              class="link link--icon"
+            >
+              <i aria-hidden="true" class="fab fa-github"></i>
+            </a> -->
+            <a
+              target="_blank"
+              href="https://o-mnifood.netlify.app/"
+              aria-label="live preview"
+              class="link link--icon"
+            >
+              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
+            </a>
+          </div>
+
+          <div class="service">
+            <h3>Bug Fixing</h3>
+            <p class="service__description">
+              Fix UI bugs for pixel perfect design.
+            </p>
+            <ul class="service__stack">
+              <li class="service__stack-item">Frontend</li>
+              <li class="service__stack-item">DevTools</li>
+              <!-- <li class="service__stack-item">NPM</li> -->
+            </ul>
+
+            <!-- <a
+              target="_blank"
+              href="https://github.com/ahanafasir/contact-form"
+              aria-label="source code"
+              class="link link--icon"
+            >
+              <i aria-hidden="true" class="fab fa-github"></i>
+            </a> -->
+            <a href="#" aria-label="live preview" class="link link--icon">
+              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
+            </a>
+          </div>
+
+          <div class="service">
+            <h3>Testing</h3>
+            <p class="service__description">
+              Test your existing web & mobile apps.
+            </p>
+            <ul class="service__stack">
+              <li class="service__stack-item">Python</li>
+              <li class="service__stack-item">Selenium</li>
+              <li class="service__stack-item">Appium</li>
+            </ul>
+
+            <!-- <a
+              target="_blank"
+              href="https://github.com/asian-power"
+              aria-label="source code"
+              class="link link--icon"
+            >
+              <i aria-hidden="true" class="fab fa-github"></i>
+            </a> -->
+            <a
+              target="_blank"
+              href="https://github.com/ahanafasir/wp-dark-theme-test"
+              aria-label="live preview"
+              class="link link--icon"
+            >
+              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
+            </a>
+          </div>
+        </div>
+
+        <!-- <div class="more__services">
+          <a
+            target="_blank"
+            href="https://github.com/ahanafasir?tab=repositories"
+            class="link projects__link"
+            >learn more</a
+          >
+        </div> -->
+      </section>
+
       <!-- Projects -->
       <section id="projects" class="section projects">
         <h2 class="section__title">Projects</h2>
@@ -172,9 +273,7 @@
 
           <div class="project">
             <h3>Asian Power BD</h3>
-            <p class="project__description">
-              SPA for a local power compamny
-            </p>
+            <p class="project__description">SPA for a local power compamny</p>
             <ul class="project__stack">
               <li class="project__stack-item">Project Lead</li>
             </ul>
