experience section added. navbar updated

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
       <nav class="nav center">
         <ul class="nav__list center">
           <li class="nav__list-item">
+            <a class="link link--nav" href="#experience">Experience</a>
+          </li>
+          <li class="nav__list-item">
             <a class="link link--nav" href="#services">Services</a>
           </li>
           <li class="nav__list-item">
@@ -90,7 +93,7 @@
         <div class="about__contact center">
           <a
             target="_blank"
-            href="https://drive.google.com/file/d/1hRNPak0-6N_NYrCYzC3MOeHdiCGjoYtt/view?usp=sharing"
+            href="https://drive.google.com/file/d/1Jc8YFtCafIFyhm1OYBmvVu-0flLe-LwC/view?usp=sharing"
           >
             <span class="btn btn--outline">Resume</span>
           </a>
@@ -114,6 +117,115 @@
           </a>
         </div>
       </div>
+
+      <!-- Experience -->
+      <section id="experience" class="section services">
+        <h2 class="section__title">Experience</h2>
+
+        <div class="services__grid">
+          <div class="service">
+            <h3>Bevy Commerce</h3>
+            <p class="service__description">
+              QA Developer
+            </p>
+            <p class="service__description">
+              October 2023 - Present
+            </p>
+            <ul class="service__stack">
+              <li class="service__stack-item">Web Application Testing</li>
+              <li class="service__stack-item">Shopify Theme Development</li>
+              <li class="service__stack-item">JavaScript</li>
+            </ul>
+
+            <!-- <a
+              target="_blank"
+              href="https://github.com/ahanafasir/omnifood"
+              aria-label="source code"
+              class="link link--icon"
+            >
+              <i aria-hidden="true" class="fab fa-github"></i>
+            </a> -->
+            <a
+              target="_blank"
+              href="https://bevycommerce.com/"
+              aria-label="live preview"
+              class="link link--icon"
+            >
+              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
+            </a>
+          </div>
+
+          <div class="service">
+            <h3>Unilever</h3>
+            <p class="service__description">
+              System Lead - Data, Digital & IT
+            </p>
+            <p class="service__description">
+              October 2022 - March 2023
+            </p>
+            <ul class="service__stack">
+              <li class="service__stack-item">Data Analysis</li>
+              <li class="service__stack-item">ERP</li>
+              <li class="service__stack-item">Project Management</li>
+            </ul>
+
+            <!-- <a
+              target="_blank"
+              href="https://github.com/ahanafasir/contact-form"
+              aria-label="source code"
+              class="link link--icon"
+            >
+              <i aria-hidden="true" class="fab fa-github"></i>
+            </a> -->
+            <a target="_blank"
+              href="https://bd.pureitwater.com/" aria-label="live preview" class="link link--icon">
+              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
+            </a>
+          </div>
+
+          <div class="service">
+            <h3>Shingara Production</h3>
+            <p class="service__description">
+              Digital Consultant
+            </p>
+            <p class="service__description">
+              November 2018 - July 2022
+            </p>
+            <ul class="service__stack">
+              <li class="service__stack-item">E-commerce</li>
+              <li class="service__stack-item">WordPress</li>
+              <li class="service__stack-item">Digital Transformation</li>
+            </ul>
+
+            <!-- <a
+              target="_blank"
+              href="https://github.com/asian-power"
+              aria-label="source code"
+              class="link link--icon"
+            >
+              <i aria-hidden="true" class="fab fa-github"></i>
+            </a> -->
+            <a
+              target="_blank"
+              href="https://shingaraproduction.com/"
+              aria-label="live preview"
+              class="link link--icon"
+            >
+              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
+            </a>
+          </div>
+        </div>
+
+        <!-- <div class="more__services">
+          <a
+            target="_blank"
+            href="https://github.com/ahanafasir?tab=repositories"
+            class="link projects__link"
+            >learn more</a
+          >
+        </div> -->
+      </section>
+
 
       <!-- Services -->
       <section id="services" class="section services">
